demo-istio/quickstart3/deploys/service.yaml
##################################################################################################
# service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: pcbook
  labels:
    app: pcbook
    service: pcbook
spec:
  ports:
  - port: 8090
    name: grpc-8090
    protocol: TCP
  selector:
    app: pcbook
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pcbook-v1
  labels:
    app: pcbook
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pcbook
      version: v1
  template:
    metadata:
      labels:
        app: pcbook
        version: v1
    spec:
      containers:
      - name: pcbook
        image: pcbook/laptop:v1
        imagePullPolicy: IfNotPresent #Always
        ports:
        - containerPort: 8090
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pcbook-v2
  labels:
    app: pcbook
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pcbook
      version: v2
  template:
    metadata:
      labels:
        app: pcbook
        version: v2
    spec:
      containers:
      - name: pcbook
        image: pcbook/laptop:v2
        imagePullPolicy: IfNotPresent #Always
        ports:
        - containerPort: 8090
